--- a/signature.html
+++ b/signature.html
@@ -14,7 +14,7 @@
   <a href="https://www.facebook.com/gft.inc.team" style="color: #0A3A37;">Facebook</a></p>
 
   <p>
-    <img src="https://[your-CDN-url]/logo.png" alt="GFT Logo" width="150" height="53">
+    <img src="https://cdn.jsdelivr.net/gh/talllguy/gft-sig@main/GFT_logo_DARK_GREEN_CMYK.png" alt="GFT Logo" width="150">
   </p>
 
   <p><strong>Ingenuity That Shapes Lives™</strong></p>
