--- a/signature.html
+++ b/signature.html
@@ -1,21 +1,23 @@
-<div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; font-size: 10pt; color: #0A3A37;">
-  <p><strong>Elliott Plack</strong><br>
-  Technical Project Manager | Geospatial</p>
+<div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; font-size: 10pt; color: #0A3A37; line-height: 1.3;">
+  <p style="margin: 0;"><strong>Elliott Plack</strong></p>
+  <p style="margin: 0 0 10px 0;">Technical Project Manager | Geospatial</p>
 
-  <p>300 E Joppa Road, Suite 200<br>
-  Baltimore, MD 21286</p>
+  <p style="margin: 0;">300 E Joppa Road, Suite 200</p>
+  <p style="margin: 0;">Baltimore, MD 21286</p>
 
-  <p><strong>E:</strong> eplack@gftinc.com<br>
-  <strong>C:</strong> 410-206-6448 <strong>| D:</strong> 443-450-5226</p>
+  <p style="margin: 0;"><strong>E:</strong> <a href="mailto:eplack@gftinc.com" style="color: #0A3A37; text-decoration: none;">eplack@gftinc.com</a></p>
+  <p style="margin: 0;"><strong>C:</strong> 410-206-6448 <strong>| D:</strong> 443-450-5226</p>
 
-  <p><strong><a href="https://www.gftinc.com" style="color: #0A3A37;">gftinc.com</a></strong> | 
-  <a href="https://www.linkedin.com/company/gft-inc" style="color: #0A3A37;">LinkedIn</a> |
-  <a href="https://www.instagram.com/gft_inc" style="color: #0A3A37;">Instagram</a> |
-  <a href="https://www.facebook.com/gft.inc.team" style="color: #0A3A37;">Facebook</a></p>
-
-  <p>
-    <img src="https://cdn.jsdelivr.net/gh/talllguy/gft-sig@main/GFT_logo_DARK_GREEN_CMYK.png" alt="GFT Logo" width="150">
+  <p style="margin: 0;">
+    <strong><a href="https://www.gftinc.com" style="color: #0A3A37; text-decoration: none;">gftinc.com</a></strong> |
+    <a href="https://www.linkedin.com/company/gft-inc" style="color: #0A3A37;">LinkedIn</a> |
+    <a href="https://www.instagram.com/gft_inc" style="color: #0A3A37;">Instagram</a> |
+    <a href="https://www.facebook.com/gft.inc.team" style="color: #0A3A37;">Facebook</a>
   </p>
 
-  <p><strong>Ingenuity That Shapes Lives™</strong></p>
+  <p style="margin: 10px 0 6px 0;">
+    <img src="https://cdn.jsdelivr.net/gh/talllguy/gft-sig@main/GFT_logo_DARK_GREEN_CMYK.png" alt="GFT Logo" width="150" style="display: block;">
+  </p>
+
+  <p style="margin: 0;"><strong>Ingenuity That Shapes Lives™</strong></p>
 </div>
